[gd_scene load_steps=2 format=3 uid="uid://c2q35oixaw23s"]

[ext_resource type="Script" path="res://scenes/high_score.gd" id="1_2dhqc"]

[node name="HighScore" type="Node2D"]
script = ExtResource("1_2dhqc")

[node name="LightScoreLabel" type="Label" parent="."]
modulate = Color(1, 1, 0.509804, 1)
offset_left = 181.0
offset_top = 115.0
offset_right = 242.0
offset_bottom = 138.0
text = "Light Score: 0"

[node name="ShadowsScoreLabel" type="Label" parent="."]
modulate = Color(0.415686, 0.603922, 1, 1)
offset_left = 181.0
offset_top = 138.0
offset_right = 284.0
offset_bottom = 161.0
text = "Shadows  Score: 0"

[node name="BalanceScoreLabel" type="Label" parent="."]
modulate = Color(0.766901, 0.726296, 0.726705, 1)
offset_left = 181.0
offset_top = 177.949
offset_right = 319.0
offset_bottom = 200.949
text = "Balance  Score: 0"
